# Ergometer-Software

./: .gitignore  .pdm-python  Leistungstest.py  README.md  main.py  pyproject.toml
