[project]
name = "Ergometer-Software"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MaierElias, PaulRiedlsperger", email = "me7770@mci4me.at, rp0317@mci4me.at"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
